# virgil-cli

./: .clang-format  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  CMakeLists.txt  ChangeLog  Gopkg.toml  JenkinsFile  Jenkinsfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  virgil.rb
ci/: configure.sh  install-cmake-for-linux.sh  install-cmake.sh  install-deps.sh  install_deps.sh  run.sh
client/: client.go
client/protobuf/: http_error.pb.go  http_error.proto
cmake/: check_pointer_size.cmake  json.cmake  jsoncpp_ext.cmake  virgil.cmake  virgil_depends.cmake  virgil_depends_local.cmake  virgil_ext.cmake  virgil_log.cmake
cmd/: app.go  cards.go  decrypt.go  encrypt.go  extract_pub_key.go  key.go  keygen.go  kms.go  login.go  logout.go  passw0rd.go  purekit.go  register.go  scms.go  sign.go  token.go  use.go  verify.go  wave.go
cmd/app/: create.go  delete.go  key.go  list.go  token.go  update.go
cmd/cards/: delete.go  revoke.go  search.go
cmd/key/: create.go  delete.go  list.go  update.go
cmd/kms/: create.go  delete_update_token.go  generate_private_key.go  get_update_token.go  list.go  rotate_keys.go
cmd/passw0rd/: keygen.go  updatekeys.go
cmd/pure/: keygen.go  updatekeys.go
cmd/scms/: dcm.go  device.go  init.go
cmd/token/: create.go  delete.go  list.go
cmd/wave/: dcm.go  device.go  device_list.go  init.go
conf/: default-config.yaml  logger-default.conf
data/: .virgil-cli-config  doc.txt  virgil-cli-config.ini  virgil-cli.ini
doc/html/: container-auth.html  container-confirm.html  container-create.html  container-del.html  container-info.html  container-reset.html  container-update.html  decrypt.html  encrypt.html  private-key-add.html  private-key-del.html  private-key-gen.html  private-key-get.html  private-key-info.html  public-key-add.html  public-key-confirm.html  public-key-del.html  public-key-get.html  public-key-reset.html  public-key-update.html  sign.html  user-data-add.html  user-data-confirm.html  user-data-del.html  user-data-reconfirm.html  verify.html  virgil.html
doc/markdown/: card-create-global.1.md  card-create-private.1.md  card-create.1.md  card-get.1.md  card-get.md  card-revoke-global.1.md  card-revoke-private.1.md  card-revoke.1.md  card-search-app.1.md  card-search-app.md  card-search-global.1.md  card-search-private.1.md  card-search.1.md  card-search.md  card-sign.1.md  card-sign.md  card-unsign.1.md  card-unsign.md  decrypt.1.md  encrypt.1.md  hash.1.md  identity-confirm-global.1.md  identity-confirm-private.1.md  identity-confirm.1.md  identity-valid.1.md  identity-verify.1.md  key2pub.1.md  keygen.1.md  private-key-add.1.md  private-key-del.1.md  private-key-get.1.md  public-key-get.1.md  public-key-revoke-global.1.md  public-key-revoke-private.1.md  public-key-revoke.1.md  sign.1.md  verify.1.md  virgil-card-create-global.1.md  virgil-card-create-private.1.md  virgil-card-get.1.md  (+34 more)
doc/pandoc/: card-create-global.1.pandoc  card-create-private.1.pandoc  card-create.1.pandoc  card-get.1.pandoc  card-get.pandoc  card-revoke-global.1.pandoc  card-revoke-private.1.pandoc  card-revoke.1.pandoc  card-search-app.1.pandoc  card-search-app.pandoc  card-search-global.1.pandoc  card-search-private.1.pandoc  card-search.1.pandoc  card-search.pandoc  card-sign.1.pandoc  card-sign.pandoc  card-unsign.1.pandoc  card-unsign.pandoc  container-auth.1.pandoc  container-confirm.1.pandoc  container-create.1.pandoc  container-del.1.pandoc  container-info.1.pandoc  container-reset.1.pandoc  container-update.1.pandoc  decrypt.1.pandoc  encrypt.1.pandoc  hash.1.pandoc  identity-confirm-global.1.pandoc  identity-confirm-private.1.pandoc  identity-confirm.1.pandoc  identity-valid.1.pandoc  identity-validate.1.pandoc  identity-verify.1.pandoc  key2pub.1.pandoc  keygen.1.pandoc  private-key-add.1.pandoc  private-key-del.1.pandoc  private-key-extr-pub.1.pandoc  private-key-gen.1.pandoc  (+53 more)
doc/sphinx-doc/: Makefile  make.bat  utils.txt  vcli2sphinx.py
ext/: cfgpath.h  cfgpath_window.h  config_path.h  config_path_apple.h  config_path_linux.h  config_path_unix.h  config_path_window.h
ext/config_path/: config_path_linux.h
ext/docopt/: docopt.cmake
ext/easylogging/: easylogging.cmake
ext/filesystem/: path.h
ext/tclap/: StdOutput.h  ValuesConstraint.h
ext/virgil_sdk/: virgil_sdk.cmake
ext/yaml-cpp/: yaml-cpp.cmake
include/cli/: ConfigFile.h  ExitCode.h  InputShadow.h  config.h  consts.h  guid.h  ini.hpp  memory.h  pair.h  pki.h  util.h  uuid.h  version.h
models/: account.go  application.go  key.go  scms.go
src/: Argument.cxx  ArgumentAnyValidation.cxx  ArgumentBoolValidation.cxx  ArgumentCommandLineSource.cxx  ArgumentConfigSource.cxx  ArgumentDefaultsSource.cxx.in  ArgumentEnumValidation.cxx  ArgumentError.cxx  ArgumentIO.cxx  ArgumentImportance.cxx  ArgumentKeyValueAliasValidation.cxx  ArgumentKeyValueValidation.cxx  ArgumentNotEmptyValidation.cxx  ArgumentNumberValidation.cxx  ArgumentParseOptions.cxx  ArgumentRangeValidation.cxx  ArgumentRules.cxx  ArgumentSource.cxx  ArgumentTextValidation.cxx  ArgumentTransformer_Command.cxx  ArgumentTransformer_Crypto.cxx  ArgumentTransformer_Model.cxx  ArgumentTransformer_VirgilServiceModel.cxx  ArgumentUserInputSource.cxx  ArgumentUserSource.cxx  ArgumentValidation.cxx  ArgumentValidationHub.cxx  ArgumentValidationResult.cxx  ArgumentValue.cxx  ArgumentValueEnumSource.cxx  ArgumentValueFileSource.cxx  ArgumentValueParserSource.cxx  ArgumentValueSource.cxx  ArgumentValueTextSource.cxx  ArgumentValueVirgilSource.cxx  BorderFormatter.cxx  Card.cxx  CardCreateCommand.cxx  CardFormatter.cxx  CardGetCommand.cxx  (+62 more)
src/commands/: virgil.cxx  virgiladduser.cxx  virgilcertinfo.cxx  virgilconfirm.cxx  virgildecrypt.cxx  virgilencrypt.cxx  virgilkey2pub.cxx  virgilkeygen.cxx  virgilkeyget.cxx  virgilkeyreg.cxx  virgilpub2cert.cxx  (+3 more)
utils/: app.go  config.go  console.go  errcheck.go  export_man.sh  format_code.sh  login.go  man2html.sh  pandoc2man.sh  pandoc2markdown.sh  parser.go  sender.go  test_cli.sh  token.go  uninstall.sh  update_docs.sh  user_messages.go  version.go
(+353 files in other folders)
